--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "xreact-core-libs",
+  "name": "xreact-core-libraries",
   "description": "Common react libraries and packages",
   "repository": {
     "type": "git",
-    "url": "https://github.com/starvn/xreact-core-libs"
+    "url": "https://github.com/starvn/xreact-core-libraries"
   },
   "keywords": [
     "xreact",
@@ -12,7 +12,7 @@
   "author": "Huy Duc Dao",
   "license": "Apache License, Version 2.0",
   "bugs": {
-    "url": "https://github.com/starvn/xreact-core-libs/issues"
+    "url": "https://github.com/starvn/xreact-core-libraries/issues"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -27,7 +27,7 @@
     "LICENCE.txt",
     "README.md",
     "index.ts",
-    "xreact-core-libs.ts"
+    "xreact-core-libraries.ts"
   ],
   "homepage": "https://starvn.github.io",
   "peerDependencies": {
@@ -131,7 +131,7 @@
     "test:watch": "npm run jest -- --watch",
     "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config jest.conf.js",
     "jest:update": "npm run jest -- --updateSnapshot",
-    "build": "npm run cleanup && npm run tsc && webpack && shx cp bundles/xreact-core-libs.umd.js bundles/index.js",
+    "build": "npm run cleanup && npm run tsc && webpack && shx cp bundles/xreact-core-libraries.umd.js bundles/index.js",
     "release": "npm test && git push && git push --tags && npm publish",
     "commit-lib": "git add lib && git commit --allow-empty -m \"Update libs\"",
     "release:patch": "npm run build && npm run commit-lib && npm version patch -a -m \"Update to %s\" && npm run release",
